refactor: comment out starting impl of redis caching